--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,15 @@ services:
       - "3000:3000"
     environment:
       - Port=3000
+  mongo:
+    image: mongo
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=jonas
+      - MONGO_INITDB_ROOT_PASSWORD=1234
+    volumes:
+      # a named volume with name "mongo-db". 
+      - mongo-db:/data/db # nameofvolume:pathincontainer
+
+# A named volume can be used by multiple services. That is why we need to add this.
+volumes:
+  mongo-db:
