--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,18 +11,16 @@ services:
       args:
         - NODE_ENV=production
     environment:
-      # ${MONGO_USER} means that the MONGO_USER env var will be pulled from our Ubuntu server. 
-      # Without quotation marks env var needs to be in an .env file in the same folder as this compose file in the Ubuntu server.
-      # NOTE: BOTH WITH AND WITHOUT DOES THE SAME FOR ME. I MUST HAVE .env FILE WITH COMPOSE FILE. CAN'T GET READING FROM
-      # HOST ENV VAR TO WORK.   
+      # ${MONGO_USER} means that the MONGO_USER env var will be pulled from our Ubuntu server env var. 
+      # NOTE: This doesn't work. I need to have an .env file with env var in the same folder as compose file. Need to investigate more. 
       - NODE_ENV=production
-      - MONGO_USER="${MONGO_USER}"  
-      - MONGO_PASSWORD="${MONGO_PASSWORD}"
-      - SESSION_SECRET="${SESSION_SECRET}"
+      - MONGO_USER=${MONGO_USER}  
+      - MONGO_PASSWORD=${MONGO_PASSWORD}
+      - SESSION_SECRET=${SESSION_SECRET}
     # This is more optimised than "npm run start".  
     command: node index.js 
 
   mongo:
     environment:
-      - MONGO_INITDB_ROOT_USERNAME="${MONGO_INITDB_ROOT_USERNAME}"
-      - MONGO_INITDB_ROOT_PASSWORD="${MONGO_INITDB_ROOT_PASSWORD}"
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_INITDB_ROOT_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_INITDB_ROOT_PASSWORD}
