--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,12 @@ services:
       # Sync with a bind mount volume.
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
   node-app:
-    # Build the image from our Dockerfile
-    build: . # "." is the path to our Dockerfile. 
+    # Build the image from our Dockerfile when we do "docker compose up". "." is the path to our Dockerfile. 
+    build: . #
+
+    # When we use the command "docker pull", it will pull this image from Dockerhub. We do this on the production server.
+    image: jonasjonasdocker/node-app 
+
     # All the configurations from the docker run command. Port to open, bind mount volume, anonymous volume, env file,  
    
     # When we use nginx we don't need to map ports for node-app container. 
